# nvidia_courses

./: README.md  SCRAPER_SETUP.md  WARP.md  nvidia_agent_architecture.md  pyproject.toml  scraper_config.yaml  transcribe.py
.devcontainer/: devcontainer.json
Building RAG Agents with LLMs - Nvidia Course/: Augmenting LLMs using Retrieval Augmented Generation (RAG) - Transcript.txt  Documents and Embeddings Part 5 - Working with Documents - Transcript.txt  Documents and Embeddings Part 6: Embedding Models for Retrieval - Transcript.txt  Environment and LLMs Part 1: Course Environment - Transcript.txt  Environment and LLMs Part 2: LLM Services - Transcript.txt  Introduction - Transcript.txt  LangChain Part 3 - LangChain - Transcript.txt  LangChain Part 4 - Running States - Transcript.txt  Retrieval Augmented Generation Part 7 - Vector Databases - Transcript.txt  Retrieval Augmented Generation Part 8:  RAG Evaluation - Transcript.txt  Wrapping Up - Transcript.txt
Generative AI Explained - Nvidia Course/: Applications of Generative AI - Language - Transcript.txt  Applications of Generative AI - Other Modalities - Transcript.txt  Challenges and Opportunities of Generative AI - Transcript.txt  Generative AI Explained - Transcript.txt  Summary - Transcript.txt
Introduction to NVIDIA NIM Microservices - Nvidia Course/: Introduction to NVIDIA NIM Microservices - Transcript.txt  Lab Walkthrough - Transcript.txt
NVIDIA_Blog_Articles/: scraped_urls.txt
Sizing LLM Inference Systems - Nvidia Course/: First Contact with NIM - Transcript.txt  (+5 more)
nvidia_agno_agent/: .env.template  (+5 more)
(+50 files in other folders)
