[project]
name = "nvidia-courses-agent"
version = "0.1.0"
description = "NVIDIA course transcripts and blog content aggregation for AI agent development"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bharat Raghunathan"}
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "feedparser>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[project.scripts]
scrape-nvidia-blog = "nvidia_scraper.main:cli"
transcribe-video = "transcribe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nvidia_scraper"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
